test/src/e2e_vm_tests/test_programs/should_pass/language/prelude_access/src/main.sw
script;

struct A {
    addr: Address,
}

fn main() {
}
